fix issue with display problems on Safari

--- a/projects/web-mev/src/app/features/contact-dialog/contact.component.css
+++ b/projects/web-mev/src/app/features/contact-dialog/contact.component.css
@@ -22,11 +22,9 @@
 }
 
 .closeDialogButton {
-    display: flex;
-    justify-content: flex-end;
-    width: 15%;
     margin: 10px 10px 0 0;
     color: white;
+    background-color: #1DA1F2 !important;
 }
 .closeDialogButton:hover{
     opacity: .75;
